@startuml

title __MODEL's Class Diagram__\n

  namespace com.chrisjaunes.communication.client {
    namespace account {
      namespace model {
        class com.chrisjaunes.communication.client.account.model.AccountRaw {
            {static} + LIMIT_AVATAR_LEN : long
            + account : String
            + avatar : String
            + nickname : String
            + check()
            + toString()
        }
      }
    }
  }
  

  namespace com.chrisjaunes.communication.client {
    namespace account {
      namespace model {
        class com.chrisjaunes.communication.client.account.model.AccountRaw.Builder {
            + Builder()
            + build()
            + setAccount()
            + setAvatar()
            + setChatTextStyle()
            + setNickname()
        }
      }
    }
  }
  

  namespace com.chrisjaunes.communication.client {
    namespace account {
      namespace model {
        class com.chrisjaunes.communication.client.account.model.AccountView {
            ~ avatarView : Bitmap
            + AccountView()
            + getAccount()
            + getAvatarView()
            + getChatTextStyleView()
            + getNickName()
        }
      }
    }
  }
  

  namespace com.chrisjaunes.communication.client {
    namespace account {
      namespace model {
        class com.chrisjaunes.communication.client.account.AccountViewManage {
            {static} - instance : AccountViewManage
            + getAccountView()
            {static} + getInstance()
            + setAccount()
            - AccountViewManage()
        }
      }
    }
  }
  

  com.chrisjaunes.communication.client.account.model.AccountRaw o-- com.chrisjaunes.communication.client.myView.ChatTextStyleRaw : text_style
  com.chrisjaunes.communication.client.account.model.AccountRaw +-down- com.chrisjaunes.communication.client.account.model.AccountRaw.Builder
  com.chrisjaunes.communication.client.account.model.AccountRaw.Builder o-- com.chrisjaunes.communication.client.account.model.AccountRaw : account
  com.chrisjaunes.communication.client.account.model.AccountView o-- com.chrisjaunes.communication.client.account.model.AccountRaw : accountRaw
  com.chrisjaunes.communication.client.account.model.AccountView o-- com.chrisjaunes.communication.client.myView.ChatTextStyleView : chatTextStyleView
  com.chrisjaunes.communication.client.account.AccountViewManage o-- com.chrisjaunes.communication.client.account.model.AccountView : accountView


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
